Release history for Comment-Spell-Check

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.001002, see misc/*.deps* for details
 - develop: +2 ↑1 (suggests: ↑1)

0.001002 2014-10-01T13:23:27Z
 [Internals]
 - Make sure the auto-selected spell checker can in fact spell check words before finalising the selection.

0.001001 2014-09-30T02:50:57Z
 [Tests]
 - Report command to be invoked.

0.001000 2014-09-29T18:30:20Z
 - First version.
