@@ -4,7 +4,7 @@ Comment::Spell::Check - Check words from Comment::Spell vs a system spell checke
 
 # VERSION
 
-version 0.001003
+version 0.002000
 
 # OVERVIEW
 
