@@ -1,6 +1,6 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
-0.001003
+0.002000
  [Added / develop requires]
  - Dist::Zilla 5
  - Dist::Zilla::Plugin::Prereqs::AuthorDeps
