@@ -1,6 +1,6 @@
 This file contains changes to DEVELOPMENT dependencies only ( both REQUIRED and OPTIONAL )
 
-0.001003
+0.002000
  [Added / develop requires]
  - Dist::Zilla 5
  - Dist::Zilla::Plugin::Prereqs::AuthorDeps
