@@ -1,6 +1,12 @@
 Release history for Comment-Spell-Check
 
 {{$NEXT}}
+ [00 Major]
+ - Now paragraph oriented instead of line oriented.
+ - Pod::Wordlist application now happens **after** passing to your spell checker.
+ - these changes intended to improve behaviour of full-grammar based checkers like hunspell which may automatically
+   filter out words based on context, which eliminating stopwords can prove detrimental to.
+
  [Dependencies::Stats]
  - Dependencies changed since 0.001002, see misc/*.deps* for details
  - develop: +2 ↑1 (suggests: ↑1)
